force-app/main/default/objects/Auto_Pay_Enrollment__c/Auto_Pay_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Auto Pay Enrollment</label>
    <nameField>
        <displayFormat>APE-{00000}</displayFormat>
        <label>Auto Pay Enrollment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto Pay Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>