force-app/main/default/objects/Auto_Pay_Enrollment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Method</label>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Auto Pay Enrollments</relationshipLabel>
    <relationshipName>Auto_Pay_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>